--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.10.0",
+    "@mediapipe/tasks-vision": "0.10.22-rc.20250304",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -49,18 +50,22 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "12.26.1",
     "input-otp": "1.4.1",
+    "konva": "^10.2.0",
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.60.0",
+    "react-konva": "^19.2.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-image": "^1.1.4",
     "vaul": "^1.1.2",
     "zod": "3.25.76"
   },
