--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.3.7",
     "use-image": "^1.1.4",
     "vaul": "^1.1.2",
     "zod": "3.25.76"
