--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@vercel/speed-insights": "^1.3.1",
     "ai": "^6.0.64",
     "autoprefixer": "^10.4.20",
+    "cheerio": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
